--- a/VideoDemo/sample/src/main/res/layout/activity_detail_player.xml
+++ b/VideoDemo/sample/src/main/res/layout/activity_detail_player.xml
@@ -30,7 +30,7 @@
 
 </android.support.v4.widget.NestedScrollView>
 
-    <cn.utsoft.commons.video.UTStandardGSYVideoPlayer
+    <cn.utsoft.commons.VideoView.video.UTStandardGSYVideoPlayer
         android:id="@+id/detail_player"
         android:layout_width="match_parent"
         android:layout_height="@dimen/post_media_height" />
